@@ -95,8 +95,8 @@ public class AnimationShopElement extends DynamicShopElement {
         List<RenderElement> items = current.getRenderElement(renderer, selfContext);
         return items.stream()
                 // hijack the render elements to reroute updates to animation
-                .map(item -> new RenderElement(this, item.positions(), item.stack(), selfContext, item.handler(), DYNAMIC_FLAGS))
-                .collect(Collectors.toList());
+                .map(item -> item.withOwner(this, selfContext).withFlags(DYNAMIC_FLAGS))
+                .toList();
     }
 
     @Override
